--- a/laptop_price_predictor.ipynb
+++ b/laptop_price_predictor.ipynb
@@ -3494,7 +3494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 1,
    "id": "d7d776f0-daad-4fa3-94cb-fb7289c55894",
    "metadata": {},
    "outputs": [
@@ -3502,19 +3502,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: xgboost in c:\\users\\darshil mehta\\anaconda3\\lib\\site-packages (3.0.5)\n",
-      "Requirement already satisfied: numpy in c:\\users\\darshil mehta\\anaconda3\\lib\\site-packages (from xgboost) (2.1.3)\n",
-      "Requirement already satisfied: scipy in c:\\users\\darshil mehta\\anaconda3\\lib\\site-packages (from xgboost) (1.15.3)\n"
+      "Collecting xgboost\n",
+      "  Using cached xgboost-3.0.5-py3-none-win_amd64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: numpy in c:\\users\\darshil mehta\\desktop\\projects\\latop price prediction\\venv\\lib\\site-packages (from xgboost) (2.3.3)\n",
+      "Requirement already satisfied: scipy in c:\\users\\darshil mehta\\desktop\\projects\\latop price prediction\\venv\\lib\\site-packages (from xgboost) (1.16.2)\n",
+      "Using cached xgboost-3.0.5-py3-none-win_amd64.whl (56.8 MB)\n",
+      "Installing collected packages: xgboost\n",
+      "Successfully installed xgboost-3.0.5\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
    "source": [
-    "!pip install xgboost"
+    "%pip install xgboost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 2,
    "id": "fdcef0eb-51a8-4562-b4e9-ef79b5fff954",
    "metadata": {},
    "outputs": [],
@@ -4735,7 +4749,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.12.5)",
    "language": "python",
    "name": "python3"
   },
@@ -4749,7 +4763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
